tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/gateway/HTTP/to_headless.echo/_test_context/Gateway-VirtualService.1229314025.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-20468
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: headless.echo-2-20468.svc.cluster.local
  namespace: echo-2-20468
spec:
  gateways:
  - gateway
  hosts:
  - headless.echo-2-20468.svc.cluster.local
  http:
  - route:
    - destination:
        host: headless.echo-2-20468.svc.cluster.local
        port:
          number: 18080
